--- a/删除表单.html
+++ b/删除表单.html
@@ -53,147 +53,147 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u712" class="ax_default box_1">
-        <div id="u712_div" class=""></div>
+      <div id="u692" class="ax_default box_1">
+        <div id="u692_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u713" class="text" style="display: none; visibility: hidden">
+        <div id="u693" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- 托付tab (动态面板) -->
-      <div id="u714" class="ax_default" data-label="托付tab">
-        <div id="u714_state0" class="panel_state" data-label="有下划线">
-          <div id="u714_state0_content" class="panel_state_content">
+      <div id="u694" class="ax_default" data-label="托付tab">
+        <div id="u694_state0" class="panel_state" data-label="有下划线">
+          <div id="u694_state0_content" class="panel_state_content">
 
             <!-- Unnamed (矩形) -->
-            <div id="u715" class="ax_default label">
-              <div id="u715_div" class=""></div>
+            <div id="u695" class="ax_default label">
+              <div id="u695_div" class=""></div>
               <!-- Unnamed () -->
-              <div id="u716" class="text" style="visibility: visible;">
+              <div id="u696" class="text" style="visibility: visible;">
                 <p><span>托付</span></p>
               </div>
             </div>
 
             <!-- Unnamed (水平线) -->
-            <div id="u717" class="ax_default line">
-              <img id="u717_img" class="img " src="images/我的互助-无内容/u69.png"/>
+            <div id="u697" class="ax_default line">
+              <img id="u697_img" class="img " src="images/我的互助-无内容/u58.png"/>
               <!-- Unnamed () -->
-              <div id="u718" class="text" style="display: none; visibility: hidden">
+              <div id="u698" class="text" style="display: none; visibility: hidden">
                 <p><span></span></p>
               </div>
             </div>
           </div>
         </div>
-        <div id="u714_state1" class="panel_state" data-label="无下划线">
-          <div id="u714_state1_content" class="panel_state_content">
+        <div id="u694_state1" class="panel_state" data-label="无下划线">
+          <div id="u694_state1_content" class="panel_state_content">
 
             <!-- Unnamed (矩形) -->
-            <div id="u719" class="ax_default label">
-              <div id="u719_div" class=""></div>
+            <div id="u699" class="ax_default label">
+              <div id="u699_div" class=""></div>
               <!-- Unnamed () -->
-              <div id="u720" class="text" style="visibility: visible;">
+              <div id="u700" class="text" style="visibility: visible;">
                 <p><span>托付</span></p>
               </div>
             </div>
 
             <!-- Unnamed (热区) -->
-            <div id="u721" class="ax_default">
+            <div id="u701" class="ax_default">
             </div>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u722" class="ax_default label">
-        <div id="u722_div" class=""></div>
+      <div id="u702" class="ax_default label">
+        <div id="u702_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u723" class="text" style="visibility: visible;">
+        <div id="u703" class="text" style="visibility: visible;">
           <p><span>返回</span></p>
         </div>
       </div>
 
       <!-- Unnamed (图片) -->
-      <div id="u724" class="ax_default _图片1">
-        <img id="u724_img" class="img " src="images/同仁互助/u40.png"/>
+      <div id="u704" class="ax_default _图片1">
+        <img id="u704_img" class="img " src="images/同仁互助/u40.png"/>
         <!-- Unnamed () -->
-        <div id="u725" class="text" style="display: none; visibility: hidden">
+        <div id="u705" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u726" class="ax_default box_1">
-        <div id="u726_div" class=""></div>
+      <div id="u706" class="ax_default box_1">
+        <div id="u706_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u727" class="text" style="visibility: visible;">
+        <div id="u707" class="text" style="visibility: visible;">
           <p><span>我的互助</span></p>
         </div>
       </div>
 
       <!-- Unnamed (图片) -->
-      <div id="u728" class="ax_default _图片1">
-        <img id="u728_img" class="img " src="images/同仁互助/u44.png"/>
+      <div id="u708" class="ax_default _图片1">
+        <img id="u708_img" class="img " src="images/同仁互助/u44.png"/>
         <!-- Unnamed () -->
-        <div id="u729" class="text" style="display: none; visibility: hidden">
+        <div id="u709" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u730" class="ax_default label">
-        <div id="u730_div" class=""></div>
+      <div id="u710" class="ax_default label">
+        <div id="u710_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u731" class="text" style="visibility: visible;">
+        <div id="u711" class="text" style="visibility: visible;">
           <p><span>返回</span></p>
         </div>
       </div>
 
       <!-- Unnamed (热区) -->
-      <div id="u732" class="ax_default">
+      <div id="u712" class="ax_default">
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u733" class="ax_default line">
-        <img id="u733_img" class="img " src="images/我的互助-无内容/u87.png"/>
+      <div id="u713" class="ax_default line">
+        <img id="u713_img" class="img " src="images/我的互助-无内容/u76.png"/>
         <!-- Unnamed () -->
-        <div id="u734" class="text" style="display: none; visibility: hidden">
+        <div id="u714" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- 捎带tab (动态面板) -->
-      <div id="u735" class="ax_default" data-label="捎带tab">
-        <div id="u735_state0" class="panel_state" data-label="无下划线">
-          <div id="u735_state0_content" class="panel_state_content">
+      <div id="u715" class="ax_default" data-label="捎带tab">
+        <div id="u715_state0" class="panel_state" data-label="无下划线">
+          <div id="u715_state0_content" class="panel_state_content">
 
             <!-- Unnamed (矩形) -->
-            <div id="u736" class="ax_default label">
-              <div id="u736_div" class=""></div>
+            <div id="u716" class="ax_default label">
+              <div id="u716_div" class=""></div>
               <!-- Unnamed () -->
-              <div id="u737" class="text" style="visibility: visible;">
+              <div id="u717" class="text" style="visibility: visible;">
                 <p><span>捎带</span></p>
               </div>
             </div>
           </div>
         </div>
-        <div id="u735_state1" class="panel_state" data-label="有下划线">
-          <div id="u735_state1_content" class="panel_state_content">
+        <div id="u715_state1" class="panel_state" data-label="有下划线">
+          <div id="u715_state1_content" class="panel_state_content">
 
             <!-- Unnamed (矩形) -->
-            <div id="u738" class="ax_default label">
-              <div id="u738_div" class=""></div>
+            <div id="u718" class="ax_default label">
+              <div id="u718_div" class=""></div>
               <!-- Unnamed () -->
-              <div id="u739" class="text" style="visibility: visible;">
+              <div id="u719" class="text" style="visibility: visible;">
                 <p><span>捎带</span></p>
               </div>
             </div>
 
             <!-- Unnamed (水平线) -->
-            <div id="u740" class="ax_default line">
-              <img id="u740_img" class="img " src="images/我的互助-无内容/u69.png"/>
+            <div id="u720" class="ax_default line">
+              <img id="u720_img" class="img " src="images/我的互助-无内容/u58.png"/>
               <!-- Unnamed () -->
-              <div id="u741" class="text" style="display: none; visibility: hidden">
+              <div id="u721" class="text" style="display: none; visibility: hidden">
                 <p><span></span></p>
               </div>
             </div>
@@ -202,88 +202,88 @@
       </div>
 
       <!-- 互助主内容 (动态面板) -->
-      <div id="u742" class="ax_default" data-label="互助主内容">
-        <div id="u742_state0" class="panel_state" data-label="托付">
-          <div id="u742_state0_content" class="panel_state_content">
+      <div id="u722" class="ax_default" data-label="互助主内容">
+        <div id="u722_state0" class="panel_state" data-label="托付">
+          <div id="u722_state0_content" class="panel_state_content">
           </div>
         </div>
-        <div id="u742_state1" class="panel_state" data-label="捎带">
-          <div id="u742_state1_content" class="panel_state_content">
+        <div id="u722_state1" class="panel_state" data-label="捎带">
+          <div id="u722_state1_content" class="panel_state_content">
 
             <!-- Unnamed (组合) -->
-            <div id="u743" class="ax_default">
+            <div id="u723" class="ax_default">
 
               <!-- Unnamed (矩形) -->
-              <div id="u744" class="ax_default box_1">
-                <div id="u744_div" class=""></div>
+              <div id="u724" class="ax_default box_1">
+                <div id="u724_div" class=""></div>
                 <!-- Unnamed () -->
-                <div id="u745" class="text" style="display: none; visibility: hidden">
+                <div id="u725" class="text" style="display: none; visibility: hidden">
                   <p><span></span></p>
                 </div>
               </div>
 
               <!-- Unnamed (图片) -->
-              <div id="u746" class="ax_default _图片">
-                <img id="u746_img" class="img " src="images/寄件列表-是/u123.png"/>
+              <div id="u726" class="ax_default _图片">
+                <img id="u726_img" class="img " src="images/删除表单/u726.png"/>
                 <!-- Unnamed () -->
-                <div id="u747" class="text" style="display: none; visibility: hidden">
+                <div id="u727" class="text" style="display: none; visibility: hidden">
                   <p><span></span></p>
                 </div>
               </div>
 
               <!-- Unnamed (矩形) -->
-              <div id="u748" class="ax_default label">
-                <div id="u748_div" class=""></div>
+              <div id="u728" class="ax_default label">
+                <div id="u728_div" class=""></div>
                 <!-- Unnamed () -->
-                <div id="u749" class="text" style="visibility: visible;">
+                <div id="u729" class="text" style="visibility: visible;">
                   <p><span>起:海口嘉陵大厦</span></p>
                 </div>
               </div>
 
               <!-- Unnamed (矩形) -->
-              <div id="u750" class="ax_default label">
-                <div id="u750_div" class=""></div>
+              <div id="u730" class="ax_default label">
+                <div id="u730_div" class=""></div>
                 <!-- Unnamed () -->
-                <div id="u751" class="text" style="visibility: visible;">
+                <div id="u731" class="text" style="visibility: visible;">
                   <p><span>止:北京航星园</span></p>
                 </div>
               </div>
 
               <!-- Unnamed (矩形) -->
-              <div id="u752" class="ax_default label">
-                <div id="u752_div" class=""></div>
+              <div id="u732" class="ax_default label">
+                <div id="u732_div" class=""></div>
                 <!-- Unnamed () -->
-                <div id="u753" class="text" style="visibility: visible;">
+                <div id="u733" class="text" style="visibility: visible;">
                   <p><span>两个测试机</span></p>
                 </div>
               </div>
 
               <!-- Unnamed (矩形) -->
-              <div id="u754" class="ax_default label">
-                <div id="u754_div" class=""></div>
+              <div id="u734" class="ax_default label">
+                <div id="u734_div" class=""></div>
                 <!-- Unnamed () -->
-                <div id="u755" class="text" style="visibility: visible;">
+                <div id="u735" class="text" style="visibility: visible;">
                   <p><span>已确认</span></p>
                 </div>
               </div>
 
               <!-- Unnamed (组合) -->
-              <div id="u756" class="ax_default">
+              <div id="u736" class="ax_default">
 
                 <!-- Unnamed (占位符) -->
-                <div id="u757" class="ax_default _形状1">
-                  <img id="u757_img" class="img " src="images/寄件列表-是/u134.png"/>
+                <div id="u737" class="ax_default _形状1">
+                  <img id="u737_img" class="img " src="images/寄件列表-是/u121.png"/>
                   <!-- Unnamed () -->
-                  <div id="u758" class="text" style="display: none; visibility: hidden">
+                  <div id="u738" class="text" style="display: none; visibility: hidden">
                     <p><span></span></p>
                   </div>
                 </div>
 
                 <!-- Unnamed (矩形) -->
-                <div id="u759" class="ax_default _一级标题1">
-                  <div id="u759_div" class=""></div>
+                <div id="u739" class="ax_default _一级标题1">
+                  <div id="u739_div" class=""></div>
                   <!-- Unnamed () -->
-                  <div id="u760" class="text" style="visibility: visible;">
+                  <div id="u740" class="text" style="visibility: visible;">
                     <p><span>ICON</span></p>
                   </div>
                 </div>
@@ -291,10 +291,10 @@
             </div>
 
             <!-- Unnamed (矩形) -->
-            <div id="u761" class="ax_default label">
-              <div id="u761_div" class=""></div>
+            <div id="u741" class="ax_default label">
+              <div id="u741_div" class=""></div>
               <!-- Unnamed () -->
-              <div id="u762" class="text" style="visibility: visible;">
+              <div id="u742" class="text" style="visibility: visible;">
                 <p><span>DYF</span></p>
               </div>
             </div>
@@ -303,10 +303,10 @@
       </div>
 
       <!-- Unnamed (图片) -->
-      <div id="u763" class="ax_default _图片2">
-        <img id="u763_img" class="img " src="images/同仁互助/u46.png"/>
+      <div id="u743" class="ax_default _图片2">
+        <img id="u743_img" class="img " src="images/同仁互助/u46.png"/>
         <!-- Unnamed () -->
-        <div id="u764" class="text" style="display: none; visibility: hidden">
+        <div id="u744" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
