--- a/捎带已认领.html
+++ b/捎带已认领.html
@@ -53,20 +53,110 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u835" class="ax_default box_1">
-        <div id="u835_div" class=""></div>
+      <div id="u815" class="ax_default box_1">
+        <div id="u815_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u816" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (水平线) -->
+      <div id="u817" class="ax_default line">
+        <img id="u817_img" class="img " src="images/物件认领信息/u153.png"/>
+        <!-- Unnamed () -->
+        <div id="u818" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u819" class="ax_default label">
+        <div id="u819_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u820" class="text" style="visibility: visible;">
+          <p><span>七袋苹果</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u821" class="ax_default label">
+        <div id="u821_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u822" class="text" style="visibility: visible;">
+          <p><span>嘉陵大厦4楼</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u823" class="ax_default label">
+        <div id="u823_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u824" class="text" style="visibility: visible;">
+          <p><span>图片描述：</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u825" class="ax_default label">
+        <div id="u825_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u826" class="text" style="visibility: visible;">
+          <p><span>海口</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u827" class="ax_default label">
+        <div id="u827_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u828" class="text" style="visibility: visible;">
+          <p><span>物品名称：</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u829" class="ax_default label">
+        <div id="u829_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u830" class="text" style="visibility: visible;">
+          <p><span>物品描述：</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u831" class="ax_default label">
+        <div id="u831_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u832" class="text" style="visibility: visible;">
+          <p><span>七袋苹果，重约10斤，大小约24寸旅行箱，外观漂亮，携带增加个人魅力。</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (图片) -->
+      <div id="u833" class="ax_default _图片">
+        <img id="u833_img" class="img " src="images/物件认领信息/u169.png"/>
+        <!-- Unnamed () -->
+        <div id="u834" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (图片) -->
+      <div id="u835" class="ax_default _图片">
+        <img id="u835_img" class="img " src="images/物件认领信息/u169.png"/>
         <!-- Unnamed () -->
         <div id="u836" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
-      <!-- Unnamed (水平线) -->
-      <div id="u837" class="ax_default line">
-        <img id="u837_img" class="img " src="images/物件认领信息/u164.png"/>
+      <!-- Unnamed (矩形) -->
+      <div id="u837" class="ax_default label">
+        <div id="u837_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u838" class="text" style="display: none; visibility: hidden">
-          <p><span></span></p>
+        <div id="u838" class="text" style="visibility: visible;">
+          <p><span>有效时间：</span></p>
         </div>
       </div>
 
@@ -75,7 +165,7 @@
         <div id="u839_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u840" class="text" style="visibility: visible;">
-          <p><span>七袋苹果</span></p>
+          <p><span>2017-03-28</span></p>
         </div>
       </div>
 
@@ -84,7 +174,7 @@
         <div id="u841_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u842" class="text" style="visibility: visible;">
-          <p><span>嘉陵大厦4楼</span></p>
+          <p><span>托付地：</span></p>
         </div>
       </div>
 
@@ -93,7 +183,7 @@
         <div id="u843_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u844" class="text" style="visibility: visible;">
-          <p><span>图片描述：</span></p>
+          <p><span>北京</span></p>
         </div>
       </div>
 
@@ -102,7 +192,7 @@
         <div id="u845_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u846" class="text" style="visibility: visible;">
-          <p><span>海口</span></p>
+          <p><span>目的地：</span></p>
         </div>
       </div>
 
@@ -111,234 +201,144 @@
         <div id="u847_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u848" class="text" style="visibility: visible;">
-          <p><span>物品名称：</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u849" class="ax_default label">
-        <div id="u849_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u850" class="text" style="visibility: visible;">
-          <p><span>物品描述：</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u851" class="ax_default label">
-        <div id="u851_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u852" class="text" style="visibility: visible;">
-          <p><span>七袋苹果，重约10斤，大小约24寸旅行箱，外观漂亮，携带增加个人魅力。</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (图片) -->
-      <div id="u853" class="ax_default _图片">
-        <img id="u853_img" class="img " src="images/物件认领信息/u180.png"/>
-        <!-- Unnamed () -->
-        <div id="u854" class="text" style="display: none; visibility: hidden">
-          <p><span></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (图片) -->
-      <div id="u855" class="ax_default _图片">
-        <img id="u855_img" class="img " src="images/物件认领信息/u180.png"/>
-        <!-- Unnamed () -->
-        <div id="u856" class="text" style="display: none; visibility: hidden">
-          <p><span></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u857" class="ax_default label">
-        <div id="u857_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u858" class="text" style="visibility: visible;">
-          <p><span>有效时间：</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u859" class="ax_default label">
-        <div id="u859_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u860" class="text" style="visibility: visible;">
-          <p><span>2017-03-28</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u861" class="ax_default label">
-        <div id="u861_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u862" class="text" style="visibility: visible;">
-          <p><span>托付地：</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u863" class="ax_default label">
-        <div id="u863_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u864" class="text" style="visibility: visible;">
-          <p><span>北京</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u865" class="ax_default label">
-        <div id="u865_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u866" class="text" style="visibility: visible;">
-          <p><span>目的地：</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u867" class="ax_default label">
-        <div id="u867_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u868" class="text" style="visibility: visible;">
           <p><span>航星园</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u869" class="ax_default primary_button">
-        <div id="u869_div" class=""></div>
+      <div id="u849" class="ax_default primary_button">
+        <div id="u849_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u870" class="text" style="visibility: visible;">
+        <div id="u850" class="text" style="visibility: visible;">
           <p><span>返回首页</span></p>
         </div>
       </div>
 
       <!-- Unnamed (椭圆形) -->
-      <div id="u871" class="ax_default ellipse">
-        <img id="u871_img" class="img " src="images/物件认领信息/u200.png"/>
+      <div id="u851" class="ax_default ellipse">
+        <img id="u851_img" class="img " src="images/捎带已认领/u851.png"/>
         <!-- Unnamed () -->
-        <div id="u872" class="text" style="display: none; visibility: hidden">
+        <div id="u852" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u873" class="ax_default label">
-        <div id="u873_div" class=""></div>
+      <div id="u853" class="ax_default label">
+        <div id="u853_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u874" class="text" style="visibility: visible;">
+        <div id="u854" class="text" style="visibility: visible;">
           <p><span>DYF</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u875" class="ax_default label">
-        <div id="u875_div" class=""></div>
+      <div id="u855" class="ax_default label">
+        <div id="u855_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u876" class="text" style="visibility: visible;">
+        <div id="u856" class="text" style="visibility: visible;">
           <p><span>认领状态：</span></p>
         </div>
       </div>
 
       <!-- Unnamed (组合) -->
-      <div id="u877" class="ax_default">
+      <div id="u857" class="ax_default">
 
         <!-- Unnamed (图片) -->
-        <div id="u878" class="ax_default _图片1">
-          <img id="u878_img" class="img " src="images/同仁互助/u40.png"/>
+        <div id="u858" class="ax_default _图片1">
+          <img id="u858_img" class="img " src="images/同仁互助/u40.png"/>
           <!-- Unnamed () -->
-          <div id="u879" class="text" style="display: none; visibility: hidden">
+          <div id="u859" class="text" style="display: none; visibility: hidden">
             <p><span></span></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u880" class="ax_default box_1">
-          <div id="u880_div" class=""></div>
+        <div id="u860" class="ax_default box_1">
+          <div id="u860_div" class=""></div>
           <!-- Unnamed () -->
-          <div id="u881" class="text" style="visibility: visible;">
+          <div id="u861" class="text" style="visibility: visible;">
             <p><span>寄件表单</span></p>
           </div>
         </div>
 
         <!-- Unnamed (图片) -->
-        <div id="u882" class="ax_default _图片1">
-          <img id="u882_img" class="img " src="images/同仁互助/u44.png"/>
+        <div id="u862" class="ax_default _图片1">
+          <img id="u862_img" class="img " src="images/同仁互助/u44.png"/>
           <!-- Unnamed () -->
-          <div id="u883" class="text" style="display: none; visibility: hidden">
+          <div id="u863" class="text" style="display: none; visibility: hidden">
             <p><span></span></p>
           </div>
         </div>
 
         <!-- Unnamed (图片) -->
-        <div id="u884" class="ax_default _图片2">
-          <img id="u884_img" class="img " src="images/同仁互助/u46.png"/>
+        <div id="u864" class="ax_default _图片2">
+          <img id="u864_img" class="img " src="images/同仁互助/u46.png"/>
           <!-- Unnamed () -->
-          <div id="u885" class="text" style="display: none; visibility: hidden">
+          <div id="u865" class="text" style="display: none; visibility: hidden">
             <p><span></span></p>
           </div>
         </div>
       </div>
 
       <!-- 提示 (动态面板) -->
-      <div id="u886" class="ax_default ax_default_hidden" data-label="提示" style="display: none; visibility: hidden">
-        <div id="u886_state0" class="panel_state" data-label="State1">
-          <div id="u886_state0_content" class="panel_state_content">
+      <div id="u866" class="ax_default ax_default_hidden" data-label="提示" style="display: none; visibility: hidden">
+        <div id="u866_state0" class="panel_state" data-label="State1">
+          <div id="u866_state0_content" class="panel_state_content">
 
             <!-- Unnamed (组合) -->
-            <div id="u887" class="ax_default">
+            <div id="u867" class="ax_default">
 
               <!-- Unnamed (矩形) -->
-              <div id="u888" class="ax_default _形状1">
-                <div id="u888_div" class=""></div>
+              <div id="u868" class="ax_default _形状1">
+                <div id="u868_div" class=""></div>
                 <!-- Unnamed () -->
-                <div id="u889" class="text" style="display: none; visibility: hidden">
+                <div id="u869" class="text" style="display: none; visibility: hidden">
                   <p><span></span></p>
                 </div>
               </div>
 
               <!-- Unnamed (水平线) -->
-              <div id="u890" class="ax_default">
-                <img id="u890_img" class="img " src="images/物件认领信息/u223.png"/>
+              <div id="u870" class="ax_default">
+                <img id="u870_img" class="img " src="images/物件认领信息/u210.png"/>
                 <!-- Unnamed () -->
-                <div id="u891" class="text" style="display: none; visibility: hidden">
+                <div id="u871" class="text" style="display: none; visibility: hidden">
                   <p><span></span></p>
                 </div>
               </div>
 
               <!-- Unnamed (矩形) -->
-              <div id="u892" class="ax_default _一级标题2">
-                <div id="u892_div" class=""></div>
+              <div id="u872" class="ax_default _一级标题2">
+                <div id="u872_div" class=""></div>
                 <!-- Unnamed () -->
-                <div id="u893" class="text" style="visibility: visible;">
+                <div id="u873" class="text" style="visibility: visible;">
                   <p><span>确认</span></p>
                 </div>
               </div>
 
               <!-- Unnamed (矩形) -->
-              <div id="u894" class="ax_default _一级标题2">
-                <div id="u894_div" class=""></div>
+              <div id="u874" class="ax_default _一级标题2">
+                <div id="u874_div" class=""></div>
                 <!-- Unnamed () -->
-                <div id="u895" class="text" style="visibility: visible;">
+                <div id="u875" class="text" style="visibility: visible;">
                   <p><span>确认认领</span></p>
                 </div>
               </div>
 
               <!-- Unnamed (矩形) -->
-              <div id="u896" class="ax_default _文本段落2">
-                <div id="u896_div" class=""></div>
+              <div id="u876" class="ax_default _文本段落2">
+                <div id="u876_div" class=""></div>
                 <!-- Unnamed () -->
-                <div id="u897" class="text" style="visibility: visible;">
+                <div id="u877" class="text" style="visibility: visible;">
                   <p><span>感谢您的帮助，是否确认捎带此物件？</span></p>
                 </div>
               </div>
 
               <!-- Unnamed (矩形) -->
-              <div id="u898" class="ax_default _一级标题2">
-                <div id="u898_div" class=""></div>
+              <div id="u878" class="ax_default _一级标题2">
+                <div id="u878_div" class=""></div>
                 <!-- Unnamed () -->
-                <div id="u899" class="text" style="visibility: visible;">
+                <div id="u879" class="text" style="visibility: visible;">
                   <p><span>取消</span></p>
                 </div>
               </div>
@@ -348,25 +348,25 @@
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u900" class="ax_default label">
-        <div id="u900_div" class=""></div>
+      <div id="u880" class="ax_default label">
+        <div id="u880_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u901" class="text" style="visibility: visible;">
+        <div id="u881" class="text" style="visibility: visible;">
           <p><span>已认领</span></p>
         </div>
       </div>
 
       <!-- Unnamed (图片) -->
-      <div id="u902" class="ax_default _图片">
-        <img id="u902_img" class="img " src="images/已认领/u833.png"/>
+      <div id="u882" class="ax_default _图片">
+        <img id="u882_img" class="img " src="images/已认领/u813.png"/>
         <!-- Unnamed () -->
-        <div id="u903" class="text" style="display: none; visibility: hidden">
+        <div id="u883" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (热区) -->
-      <div id="u904" class="ax_default">
+      <div id="u884" class="ax_default">
       </div>
     </div>
   </body>
